09_EKS_kubernetes_test/loadbalancer.yaml

---
apiVersion: v1
kind: Namespace
metadata:
  name: lbtest

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lbtest
  name: nlb-sample-app 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: public.ecr.aws/nginx/nginx:1.21
          ports:
            - name: tcp
              containerPort: 80

---
####################################
# NLB
####################################
apiVersion: v1
kind: Service
metadata:
  namespace: lbtest
  name: nlb-sample-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb 
    #service.beta.kubernetes.io/aws-load-balancer-type: external
    #service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    #service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  ports:
    - port: 80 # Service Port
      targetPort: 80 # Container Port
      protocol: TCP
  selector:
    app: nginx

---
####################################
# CLB
####################################
#apiVersion: v1
#kind: Service
#metadata:
#  namespace: lbtest
#  name: clb-sample-service 
#spec:
#  type: LoadBalancer 
#  ports:
#    - port: 8001 # Service Port
#      targetPort: 80 # Container Port
#      protocol: TCP
#  selector:
#    app: nginx


---
####################################
# NodePort
####################################
#apiVersion: v1
#kind: Service 
#metadata:
#  namespace: lbtest
#  name: nodeport-sample-service
#spec:
#  type: NodePort 
#  ports: 
#    - name: http
#      port: 8002 # Service Port
#      targetPort: 80 # Container Port
#      nodePort: 31280 # Node Port
#  selector:
#    app: nginx

# kubectl apply -f loadbalancer.yaml
# kubectl get svc nlb-sample-service -n lbtest
# kubectl get svc clb-sample-service  -n lbtest
# kubectl get svc nodeport-sample-service -n lbtest
# External IP 로 접속해봄
# kubectl delete -f loadbalancer.yaml
